implement all dice

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.1",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/pluralize": "^0.0.29",
     "@types/react-bootstrap": "^0.32.30",
     "gh-pages": "^4.0.0"
   }
